# minivla

./: .gitignore  README.md  pyproject.toml
configs/: ablation_mlp.yaml  ablation_query.yaml  debug_tiny.yaml  failure_taxonomy.json  minivla_rhf_sac.yaml  so101_front.yaml  so101_front_wrist.yaml  so101_pi0_like.yaml
configs/splits/: so101_test.json  so101_val.json
docs/: action_head_ablation.md  data_schema_so101.md  minivla_report.md  pi0_alignment.md  post_sft_refinement.md  post_sft_refinement_ablation.md  resume_minivla_project.md
examples/: minimal_batch.py
scripts/: benchmark_latency.py  check_project.py  evaluate_policy.py  evaluate_refinement_heads.py  inspect_lerobot_dataset.py  log_rollout.py  plot_action_chunks.py  post_sft_calibrate.py  post_sft_select_checkpoint.py  replay_policy_sequence.py  run_so101_policy.py  serve_policy.py  smoke_test.py  train.py  train_refinement_heads.py  train_reward_model.py  train_sac.py
src/minivla/: __init__.py  action_heads.py  configuration_minivla.py  constants.py  fm_head.py  modeling_minivla.py  policy.py  postprocess.py  processor.py  refinement_heads.py  rhf_sac.py  splits.py  transforms.py
