[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minivla-rhf-sac"
version = "0.1.0"
description = "A compact LeRobot-compatible MiniVLA stack with RHF reward modeling and residual SAC post-training."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
